successfully tested local implementation of api... todo next is openapi (...for generating swagger UI)
